--- a/Lab.Capas.Presentacionn/Lab.Capas/Views/CategoriesWebApi/Index.cshtml
+++ b/Lab.Capas.Presentacionn/Lab.Capas/Views/CategoriesWebApi/Index.cshtml
@@ -22,8 +22,8 @@
         <td>@item.CategoryName</td>
         <td>@item.Description</td>
         <td>
-           <a href="@Url.Action("AddOrEdit","CategoriesWebApi", new { id = item.CategoryId })" class="btn btn-default"><i class="fa fa-pencil"></i>Edit</a> 
-           <a onclick="Delete(@item.CategoryId)" class="btn btn-default"><i class="fa fa-trash"></i>Delete</a>
+           @Html.ActionLink("Edit","AddOrEdit", new { id = item.CategoryId },new{ @class="btn btn-default"})
+           @Html.ActionLink("Delete","Delete", new { id = item.CategoryId}, new { @class="btn btn-default"})
         </td>
     </tr>
 }
@@ -35,12 +35,7 @@
         $(function () {
             var successMessage = '@TempData["SuccessMessage"]'
             if (successMessage != '')
-                alertify.success();
+                alertify.success(successMessage);
         })
-        function Delete(id) {
-            alertify.confirm('Web Api CRUD Operations', 'Are you sure to delete this record?', function () {
-                window/location.href = '@Url.Action("Delete","CategoriesWebApi")/' + id
-            }, null);
-        }
         </script>
     }
